test/corpus/command_items_and_selections.txt
==================
Index
==================

test: command[-2]

---

(source_file
  (command
    (command_name_def)
    (statement
      (command_call
        (command_name)
        (selection
          (index
            (integer)))
        (terminator)))))

==================
Index list
==================

test: command[0,1,3]

---

(source_file
  (command
    (command_name_def)
    (statement
      (command_call
        (command_name)
        (selection
          (index
            (integer))
          (index
            (integer))
          (index
            (integer)))
        (terminator)))))

==================
Index range
==================

test: command[3-6]

---

(source_file
  (command
    (command_name_def)
    (statement
      (command_call
        (command_name)
        (selection
          (index_range
            (index
              (integer))
            (index
              (integer))))
        (terminator)))))

==================
Percentage range
==================

test: command[50%-100%]

---

(source_file
  (command
    (command_name_def)
    (statement
      (command_call
        (command_name)
        (selection
          (index_range
            (percentage
              (integer))
            (percentage
              (integer))))
        (terminator)))))

==================
With negative range
==================

test: command[0,-4--1]

---

(source_file
  (command
    (command_name_def)
    (statement
      (command_call
        (command_name)
        (selection
          (index
            (integer))
          (index_range
            (index
              (integer))
            (index
              (integer))))
        (terminator)))))

==================
Range with step
==================

test: command[0-9:3]

---

(source_file
  (command
    (command_name_def)
    (statement
      (command_call
        (command_name)
        (selection
          (index_range
            (index
              (integer))
            (index
              (integer))
            (integer)))
        (terminator)))))

==================
Range with step 2
==================

test: command[0--1:2]

---

(source_file
  (command
    (command_name_def)
    (statement
      (command_call
        (command_name)
        (selection
          (index_range
            (index
              (integer))
            (index
              (integer))
            (integer)))
        (terminator)))))

==================
Complex example
==================

test: command[0,2-4,50%--1]

---

(source_file
  (command
    (command_name_def)
    (statement
      (command_call
        (command_name)
        (selection
          (index
            (integer))
          (index_range
            (index
              (integer))
            (index
              (integer)))
          (index_range
            (percentage
              (integer))
            (index
              (integer))))
        (terminator)))))

==================
Negation
==================

test: command[^0,1]

---

(source_file
  (command
    (command_name_def)
    (statement
      (command_call
        (command_name)
        (selection
          (negate_indexing)
          (index
            (integer))
          (index
            (integer)))
        (terminator)))))

==================
By name
==================

test: command[name1,name2]

---

(source_file
  (command
    (command_name_def)
    (statement
      (command_call
        (command_name)
        (selection
          (identifier)
          (identifier))
        (terminator)))))

==================
Shorthands
==================

test:
  command.
  command..
  command...

---

(source_file
  (command
    (command_name_def)
    (statement
      (command_call
        (command_name)
        (selection
          (negative_index_shorthand))
        (terminator)))
    (statement
      (command_call
        (command_name)
        (selection
          (negative_index_shorthand))
        (terminator)))
    (statement
      (command_call
        (command_name)
        (selection
          (negative_index_shorthand))
        (terminator)))))
